# ofxOscQuery

./: .gitignore  README.md  addon_config.mk  license.md
example-singleServer/: CMakeLists.txt  addons.make  client.html  client.maxpat  client.pd  ofxOssiaGroupNode.hpp  ofxOssiaParamNode.hpp
example-singleServer/src/: CirclesRenderer.cpp  CirclesRenderer.h  InteractiveCircle.cpp  main.cpp  ofApp.cpp  ofApp.h
example-twoServers/: CMakeLists.txt
example-twoServers/src/: InteractiveCircle.h  ofApp.cpp  ofApp.h
extra/: Demo.score  ReadMe.md
libs/ossia/include/: ossia-cpp98.hpp  ossia_export.h
src/: ofxOscQueryServer.cpp  ofxOscQueryServer.h  ofxOssiaNode.h  ofxOssiaServer.cpp  ofxOssiaServer.h  ofxOssiaTypes.h
